--- a/rewards.yaml
+++ b/rewards.yaml
@@ -20,31 +20,78 @@ Rewards:
         - repairkit: 25
     Level2:
       Chance: 50
-        Pick: 4
-        Items:
-          - FireExtinguisher: 1
-          - FlashLight: 1
-          - Defib: 3
+      Pick: 4
+      Items:
+        - FireExtinguisher: 1
+        - FlashLight: 1
+        - Defib: 3
     Level3:
       Chance: 25
-        Pick: 1
-        Items:
-          - Cash: 10000
-          - Car (Sedan): 1
-          - Car (Compact): 1
-    Level3:
+      Pick: 1
+      Items:
+        - Cash: 10000
+        - Car (Sedan): 1
+        - Car (Compact): 1
+    Level4:
       Chance: 5
-        Pick: 1
-        Items:
-          - Cash: 50000
-          - CarTune: 1
-          - DriftChip: 1
-          - Car (Sport): 1
-          - Car (Muscle): 1
-          - BurtPoints: 20
-      Level4:
+      Pick: 1
+      Items:
+        - Cash: 50000
+        - CarTune: 1
+        - DriftChip: 1
+        - Car (Sport): 1
+        - Car (Muscle): 1
+        - BurtPoints: 20
+    Level5:
       Chance: 1
-        Pick: 1
-        Items:
-          - House: 1
-        
+      Pick: 1
+      Items:
+        - House: 1
+  # Civilian rewards
+  Crim:
+
+    # Level 1 basically means 100% chance at getting an item
+    Level1: 
+      Chance: 100
+
+      # Pick 4 means we'll pick 4 of the items in the list below
+      Pick: 2
+
+      # Here is our list of items, the number next to it is the random number ceiling of the item.
+      # E.G. bandage: 20 means there's a random chance of getting between 1-20 of bandages. Could 
+      # be 1 or it could be 20, or could be 12.
+      Items: 
+        - Pistol: 1
+        - Switchblade: 1
+        - Bat: 1
+        - Knife: 1
+        - Machete: 1
+        - joints: 25
+    Level2:
+      Chance: 50
+      Pick: 2
+      Items:
+        - coke1g: 20
+        - weed1g: 20
+        - meth1g: 20
+        - bags: 300
+        - zipties: 10
+        - Ammo: 20
+    Level3:
+      Chance: 25
+      Pick: 1
+      Items:
+        - Lockpicks: 5
+        - AdvancedLockpick: 1
+        - Blowtorch: 1
+        - ATMDevice: 1
+    Level4:
+      Chance: 5
+      Pick: 1
+      Items:
+        - ClassTwoWeapon: 1
+    Level5:
+      Chance: 1
+      Pick: 1
+      Items:
+        - House: 1
